# shared-rate_limiter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/architecture/: architecture.md
src/: bucket.rs  clock.rs  config.rs  durable_open_gate.rs  feedback.rs  hash.rs  in_flight.rs  kameo_actor.rs  lib.rs  limiter.rs  observer.rs  slow_start.rs  token_bucket.rs  types.rs
tests/: bybit_rate_limits.rs  deribit_rate_limits.rs  deterministic_server_model.rs  discord_rate_limits.rs  feedback.rs  kameo_singleton.rs
