[package]
name = "shared-rate_limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use the upstream GitHub repo (no local path refs).
kameo = { git = "https://github.com/moofone/kameo", rev = "ee74f3e4e21efe4f456e6eeb1f7e68cb24322186", optional = true, default-features = false }
ahash = { version = "0.8.11", optional = true }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
# Optional actor wrapper and message types for kameo integration.
kameo = ["dep:kameo"]
# Use a faster hasher for internal `HashMap`s (hot path).
fast-hash = ["dep:ahash"]
