[package]
name = "shared-rate_limiter"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Protocol-agnostic, deterministic, synchronous rate limiter core with two-phase permits and feedback backoff."
license = "MIT OR Apache-2.0"
repository = "https://github.com/moofone/shared-rate_limiter"
readme = "README.md"

[dependencies]
ahash = { version = "0.8.11", optional = true }
heed = "0.20"
fs2 = "0.4"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
fast-hash = ["dep:ahash"]
